[gd_scene load_steps=2 format=3 uid="uid://gls6lsdjgy5c"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_eu3qv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eu3qv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Speed_Upgrade_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade Speed"

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Damage_Upgrade_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade Damage"

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Health_Upgrade_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade Health"

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Return_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Speed_Upgrade_Button" to="." method="_on_speed_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Damage_Upgrade_Button" to="." method="_on_damage_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Health_Upgrade_Button" to="." method="_on_health_upgrade_button_pressed"]
